attached_assets/Pasted--rustc-59807616e1fa2540724bfbac14d7976d7e4a3860-library_1776915029411.txt
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:1046:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:383:14
    |
383 |             .get_mut(&validator)
    |              ^^^^^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |
note: required by a bound in `BTreeMap::<K, V, A>::get_mut`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:1007:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:383:22
    |
383 |             .get_mut(&validator)
    |              ------- ^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |              |
    |              required by a bound introduced by this call
    |
note: required by a bound in `BTreeMap::<K, V, A>::get_mut`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:1007:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:411:14
    |
411 |             .get_mut(&validator)
    |              ^^^^^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |
note: required by a bound in `BTreeMap::<K, V, A>::get_mut`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:1007:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:411:22
    |
411 |             .get_mut(&validator)
    |              ------- ^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |              |
    |              required by a bound introduced by this call
    |
note: required by a bound in `BTreeMap::<K, V, A>::get_mut`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:1007:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:438:14
    |
438 |             .get_mut(&validator)
    |              ^^^^^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |
note: required by a bound in `BTreeMap::<K, V, A>::get_mut`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:1007:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:438:22
    |
438 |             .get_mut(&validator)
    |              ------- ^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |              |
    |              required by a bound introduced by this call
    |
note: required by a bound in `BTreeMap::<K, V, A>::get_mut`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:1007:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:490:31
    |
490 |             let slot = payout.entry(e.delegator).or_insert(0);
    |                               ^^^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |
note: required by a bound in `BTreeMap::<K, V, A>::entry`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:1499:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0599]: the method `or_insert` exists for enum `std::collections::btree_map::Entry<'_, Address, u128>`, but its trait bounds were not satisfied
   --> src/staking.rs:490:50
    |
490 |             let slot = payout.entry(e.delegator).or_insert(0);
    |                                                  ^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
    |
   ::: src/types.rs:9:1
    |
  9 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    | ------------------ doesn't satisfy `Address: std::cmp::Ord`
    |
    = note: the following trait bounds were not satisfied:
            `Address: std::cmp::Ord`
help: consider annotating `Address` with `#[derive(Eq, Ord, PartialEq, PartialOrd)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Eq, Ord, PartialEq, PartialOrd)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:516:40
    |
516 |         let shares = *self.delegations.get(&(delegator, validator)).unwrap_or(&0);
    |                                        ^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |
    = help: the following other types implement trait `std::cmp::Ord`:
              ()
              (A, Z, Y, X, W, V, U, T)
              (B, A, Z, Y, X, W, V, U, T)
              (C, B, A, Z, Y, X, W, V, U, T)
              (D, C, B, A, Z, Y, X, W, V, U, T)
              (E, D, C, B, A, Z, Y, X, W, V, U, T)
              (T,)
              (U, T)
            and 5 others
    = note: required for `(Address, Address)` to implement `std::cmp::Ord`
note: required by a bound in `BTreeMap::<K, V, A>::get`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:718:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:517:31
    |
517 |         match self.validators.get(&validator) {
    |                               ^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |
note: required by a bound in `BTreeMap::<K, V, A>::get`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:718:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:517:35
    |
517 |         match self.validators.get(&validator) {
    |                               --- ^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |                               |
    |                               required by a bound introduced by this call
    |
note: required by a bound in `BTreeMap::<K, V, A>::get`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/map.rs:718:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

error[E0277]: the trait bound `Address: std::cmp::Ord` is not satisfied
   --> src/staking.rs:528:39
    |
528 |                 delegators_validators.insert(*v);
    |                                       ^^^^^^ the trait `std::cmp::Ord` is not implemented for `Address`
    |
note: required by a bound in `BTreeSet::<T, A>::insert`
   --> /rustc/59807616e1fa2540724bfbac14d7976d7e4a3860/library/alloc/src/collections/btree/set.rs:898:4
help: consider annotating `Address` with `#[derive(Ord)]`
   --> src/types.rs:9:1
    |
  9 + #[derive(Ord)]
 10 | pub struct Address(#[serde(with = "hex_array_20")] pub [u8; ADDRESS_LEN]);
    |

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `zebvix-node` (lib) due to 41 previous errors
root@srv1266996:/home/zebvix-chain# 